--- a/src/static/style.css
+++ b/src/static/style.css
@@ -34,13 +34,43 @@ body {
   width: 1325px;
   height: 250px
 }
+a {
+  color: inherit;
+  text-decoration: none;
+  transition: all 0.3s;
+  color: #9d9d9d;
+}
 
+a:hover, a:focus {
+  text-decoration: none;
+}
 .button{
   background-color: #04AA6D;
   color: aliceblue;
   text-shadow: #333;
 }
-
+.form-group {
+  width: 30em;
+}
+footer {
+  background-color: #333;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+}
+p.small.text-muted {
+    color: #9d9d9d;
+}
+.percentage_result {
+  text-align: -webkit-center;
+  margin-top: 2em;
+}
+h5.text-white.mb-3 {
+  color: white;
+}
+footer.w-100.py-4.flex-shrink-0 {
+  margin-top: 30px;
+}
 .footerBox{
   position: relative;
   background-color: #333;
