--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -17,17 +17,16 @@
                 <a class="navbar-brand" href="#">Sarthak's Blog</a>
                 </div>
                 <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>z
-                <li class="active"><a href="/result">Result</a> </li>
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
                 <li class="active"><a href="#">Home</a></li>
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">About Me <span class="caret"></span></a>
+                <li><a href="#">About Me</a></li>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Courses <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                     <li><a href="#">C++</a></li>
                     <li><a href="#">Python</a></li>
                     <li><a href="#">Web Development</a></li>
                     </ul>
                 </li>
+                <li><a href="/home">Percentage Calculator</a></li>
                 <li><a href="#">Contact Us</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
@@ -65,9 +64,44 @@
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>
             </div>
-            <footer>
-                <div class="footerBox">
-
+            <!-- FOOTER -->
+            <footer class="w-100 py-4 flex-shrink-0">
+                <div class="container py-4">
+                    <div class="row gy-4 gx-5">
+                        <div class="col-lg-4 col-md-6">
+                            <h5 class="h1 text-white">FB.</h5>
+                            <p class="small text-muted">This website is built on Python which helps you with diffirent calculators.</p>
+                            <p class="small text-muted mb-0">&copy; Copyrights. All rights reserved. <a class="text-primary" href="#">Sarthak's Python</a></p>
+                        </div>
+                        <div class="col-lg-2 col-md-6">
+                            <h5 class="text-white mb-3">Quick links</h5>
+                            <ul class="list-unstyled text-muted">
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">About Me</a></li>
+                                <li><a href="#">Courses</a></li>
+                                <li><a href="#">FAQ</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-2 col-md-6">
+                            <h5 class="text-white mb-3">Quick links</h5>
+                            <ul class="list-unstyled text-muted">
+                                <li><a href="#">Python</a></li>
+                                <li><a href="#">C++</a></li>
+                                <li><a href="#">Web Development</a></li>
+                                <li><a href="#">Coding Practice</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-4 col-md-6">
+                            <h5 class="text-white mb-3">Newsletter</h5>
+                            <p class="small text-muted">If you would like to connect with us:</p>
+                            <form action="#">
+                                <div class="input-group mb-3">
+                                    <input class="form-control" type="text" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
+                                    <button class="btn btn-primary" id="button-addon2" type="button"><i class="fas fa-paper-plane"></i></button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </footer>
     </body>
