solved small bugs

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -27,6 +27,7 @@
                     </ul>
                 </li>
                 <li><a href="/home">Percentage Calculator</a></li>
+                <li><a href="/login">Speech Recogniser</a></li>
                 <li><a href="#">Contact Us</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
