--- a/src/static/style.css
+++ b/src/static/style.css
@@ -54,7 +54,8 @@ a:hover, a:focus {
 }
 footer {
   background-color: #333;
-  position: absolute;
+  position: relative;
+  top: 200px;
   width: 100%;
   bottom: 0;
 }
