--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -28,6 +28,7 @@
                 </li>
                 <li><a href="/home">Percentage Calculator</a></li>
                 <li><a href="/login">Speech Recogniser</a></li>
+                <li><a href="/dictionary">Get Meaning</a></li>
                 <li><a href="#">Contact Us</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
