started developing python sec

--- a/src/templates/python.html
+++ b/src/templates/python.html
@@ -22,7 +22,7 @@
                 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Courses <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                     <li><a href="#">C++</a></li>
-                    <li><a href="/python">Python</a></li>
+                    <li><a href="#">Python</a></li>
                     <li><a href="#">Web Development</a></li>
                     </ul>
                 </li>
@@ -37,35 +37,7 @@
                 </ul>
             </div>
             </nav>
-            <div class="container">
-                <form action="result" method="post">
-                <div class="form-group">
-                    <label for="maths">Maths:</label>
-                    <input type="number" class="form-control" placeholder="Enter Maths Marks" name="math_marks">
-                </div>
-                <div class="form-group">
-                    <label for="science">Science(Bio+Phy+Che):</label>
-                    <input type="number" class="form-control" placeholder="Enter Science Marks" name="science_marks">
-                </div>
-                <div class="form-group">
-                    <label for="EngHin">English + Hindi:</label>
-                    <input type="number" class="form-control" placeholder="Enter English + Hindi Marks" name="EngHin_marks">
-                </div>
-                <div class="form-group">
-                    <label for="computer">Computer:</label>
-                    <input type="number" class="form-control" placeholder="Enter Computer Marks" name="Comp_marks">
-                </div>
-                <div class="form-group">
-                    <label for="SSC">SSC:</label>
-                    <input type="number" class="form-control" placeholder="Enter SSC marks" name="SSC_marks">
-                </div>
-                <div class="form-group">
-                    <label for="Total">Total of total:</label>
-                    <input type="number" class="form-control" placeholder="Enter total of total Marks" name="total_marks">
-                </div>
-                <button type="submit" class="btn btn-default">Submit</button>
-            </form>
-            </div>
+            <b>{{ headtype }}</b>
             <!-- FOOTER -->
             <footer class="w-100 py-4 flex-shrink-0">
                 <div class="container py-4">
