--- a/src/templates/python.html
+++ b/src/templates/python.html
@@ -17,12 +17,12 @@
                 <a class="navbar-brand" href="#">Sarthak's Blog</a>
                 </div>
                 <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li class="active"><a href="/home">Home</a></li>
                 <li><a href="#">About Me</a></li>
                 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Courses <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                     <li><a href="#">C++</a></li>
-                    <li><a href="#">Python</a></li>
+                    <li><a href="python">Python</a></li>
                     <li><a href="#">Web Development</a></li>
                     </ul>
                 </li>
@@ -37,7 +37,15 @@
                 </ul>
             </div>
             </nav>
-            <b>{{ headtype }}</b>
+            <h4>Looks like you wanna learn python, Well python is a wonderful language it has a variety<br>
+                of features some of them are:<br>It is easy to use, <br>
+                it has a lot of packages made for it,<br>it can be used for variou purposes for example web development,<br> 
+                AI/ML,<br>data science, <br>app development. <br><br>If you are coming from another language than you may not like python that much 
+                but you will love it just give it a try. So, lets start our journey with python<br>Here is a basic python code for you to try:</b>
+                <div class="CodeBox"><br><br>print('Hello World!)</div><br>
+                Output:
+                <div class="OutputBox">Hello World!</div>
+            <b>{{ headtype }}</h4>
             <!-- FOOTER -->
             <footer class="w-100 py-4 flex-shrink-0">
                 <div class="container py-4">
